addons/dashboard/manifests/ingress-nginx/dashboard-nginx-ingress.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

# The kubernetes-dashboard service exposes an angular application on port 443
# The angular application is design in such a way that it constructs the
# relative paths based on the value stored in the x-forwarded-prefix header
# of the request. So if the application is exposed on another path than root,
# this header must have as value that path.

# this ingress will be merged with ingress provided in:
# addons/ingress/nginx/manifests/cluster-local-ingress.yaml
# and exposes the kubernetes-dashboard angular application on:
# https://k2s.cluster.local/dashboard/
# The certificate is taken from k8s secret 'k2s.cluster.local-tls'
# (see addons/ingress/nginx/manifests/cluster-local-ingress.yaml)
# NOTE: there is a glitch in dashboard,
# causing the trailing / in bot URLs to be needed, i.e.
# https://k2s.cluster.local/dashboard will not work!
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-nginx-cluster-local
  namespace: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/dashboard/"
spec:
  ingressClassName: nginx
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - path: /dashboard/(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
